// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Github snapshot 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  synth:
    name: Synth CDK application
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: synthRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen build
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cloud-assembly
          path: cdk.out/
  assetUpload:
    name: Publish assets to AWS
    needs: synth
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: write
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - run: git config --global user.name "github-actions" && git config --global user.email "github-actions@github.com"
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: publishRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets:my-dev
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: prodPublishRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets:prod
      - run: npx projen bump
      - run: npx projen release:push-assembly
  deploy-my-dev:
    name: Deploy stage my-dev to AWS
    needs: assetUpload
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: deploy-my-dev
      cancel-in-progress: false
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: devRole
          role-session-name: GitHubAction
          aws-region: eu-central-1
      - run: npx projen deploy:my-dev
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-my-dev
          path: cdk-outputs-my-dev.json
"
`;

exports[`Github snapshot 2`] = `
"// ~~ Generated by projen
/* eslint-disable */
import { App, AppProps, Stack, StackProps } from 'aws-cdk-lib';




/**
 * PipelineAppProps is an extension of AppProps, which is part of the AWS CDK core.
 * It includes optional functions to provide AWS Stacks for different stages.
 *
 * Use these functions to instantiate your application stacks with the parameters for
 * each stage
 */
export interface PipelineAppProps extends AppProps {
  /** This function will be used to generate a my-dev stack. */
  provideMyDevStack: (app: App, stackId: string, props: PipelineAppStackProps) => Stack;
  /** This function will be used to generate a prod stack. */
  provideProdStack: (app: App, stackId: string, props: PipelineAppStackProps) => Stack;

}

/**
 * PipelineAppStackProps is an extension of StackProps, which is part of the AWS CDK core.
 * It includes an additional property to specify the stage name.
 */
export interface PipelineAppStackProps extends StackProps {
  stageName: string;
}

/**
 * The PipelineApp class extends the App class from AWS CDK and overrides the constructor to support
 * different stages of the application (development, production, personal, feature) by invoking the provided
 * stack-providing functions from the props.
 */
export class PipelineApp extends App {
  constructor(props: PipelineAppProps) {
    super(props);

    // If a function is provided for creating a my-dev stack, it is called with necessary arguments.
    if (props.provideMyDevStack) {
      props.provideMyDevStack(this, 'testapp-my-dev', { env: { account: '123456789012', region: 'eu-central-1' }, stackName: 'testapp-my-dev', stageName: 'my-dev' });
    }
    // If a function is provided for creating a prod stack, it is called with necessary arguments.
    if (props.provideProdStack) {
      props.provideProdStack(this, 'testapp-prod', { env: { account: '123456789012', region: 'eu-central-1' }, stackName: 'testapp-prod', stageName: 'prod' });
    }


  }
}
"
`;

exports[`Github snapshot 3`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release-prod
on:
  workflow_dispatch:
    inputs:
      version:
        description: Package version
        required: true
jobs:
  deploy:
    name: Release stage prod to AWS
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: deploy-prod
      cancel-in-progress: false
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: npx projen install:ci
      - run: yarn add @assembly/testapp@\${{github.event.inputs.version}}
      - run: mv ./node_modules/@assembly/testapp cdk.out
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: prodRole
          role-session-name: GitHubAction
          aws-region: eu-central-1
      - run: npx projen deploy:prod
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-prod
          path: cdk-outputs-prod.json
"
`;

exports[`Github snapshot 4`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": {
    "aws-cdk-lib": "^2.102.0",
    "constructs": "^10.0.5",
  },
  "devDependencies": {
    "@stylistic/eslint-plugin": "^2",
    "@types/jest": "*",
    "@types/node": "*",
    "@types/standard-version": "*",
    "@typescript-eslint/eslint-plugin": "^8",
    "@typescript-eslint/parser": "^8",
    "aws-cdk": "^2",
    "cdk-assets": "*",
    "esbuild": "*",
    "eslint": "^9",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "jest": "*",
    "jest-junit": "^16",
    "projen": "*",
    "standard-version": "*",
    "ts-jest": "*",
    "ts-node": "*",
    "typescript": "*",
  },
  "jest": {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": [
      "/node_modules/",
    ],
    "coverageProvider": "v8",
    "coverageReporters": [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "reporters": [
      "default",
      [
        "jest-junit",
        {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": [
      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.[t]sx?$": [
        "ts-jest",
        {
          "tsconfig": "tsconfig.dev.json",
        },
      ],
    },
    "watchPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "license": "Apache-2.0",
  "name": "testapp",
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "npx projen build",
    "bump": "npx projen bump",
    "bundle": "npx projen bundle",
    "clobber": "npx projen clobber",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "deploy:my-dev": "npx projen deploy:my-dev",
    "deploy:prod": "npx projen deploy:prod",
    "diff:my-dev": "npx projen diff:my-dev",
    "diff:prod": "npx projen diff:prod",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "fastdiff:my-dev": "npx projen fastdiff:my-dev",
    "fastdiff:prod": "npx projen fastdiff:prod",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "projen": "npx projen",
    "publish:assets": "npx projen publish:assets",
    "publish:assets:my-dev": "npx projen publish:assets:my-dev",
    "publish:assets:prod": "npx projen publish:assets:prod",
    "release:push-assembly": "npx projen release:push-assembly",
    "synth": "npx projen synth",
    "synth:silent": "npx projen synth:silent",
    "test": "npx projen test",
    "test:watch": "npx projen test:watch",
    "upgrade": "npx projen upgrade",
  },
  "version": "0.0.0",
}
`;

exports[`Github snapshot 5`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "env": {
    "PATH": "$(npx -c "node --print process.env.PATH")",
  },
  "tasks": {
    "build": {
      "description": "Full release build",
      "name": "build",
      "steps": [
        {
          "spawn": "default",
        },
        {
          "spawn": "pre-compile",
        },
        {
          "spawn": "compile",
        },
        {
          "spawn": "post-compile",
        },
        {
          "spawn": "test",
        },
        {
          "spawn": "package",
        },
      ],
    },
    "bump": {
      "description": "Bumps version based on latest git tag",
      "name": "bump",
      "steps": [
        {
          "exec": "pipelines-release bump",
        },
        {
          "exec": "git push --tags",
        },
      ],
    },
    "bundle": {
      "description": "Prepare assets",
      "name": "bundle",
    },
    "clobber": {
      "condition": "git diff --exit-code > /dev/null",
      "description": "hard resets to HEAD of origin and cleans the local repo",
      "env": {
        "BRANCH": "$(git branch --show-current)",
      },
      "name": "clobber",
      "steps": [
        {
          "exec": "git checkout -b scratch",
          "name": "save current HEAD in "scratch" branch",
        },
        {
          "exec": "git checkout $BRANCH",
        },
        {
          "exec": "git fetch origin",
          "name": "fetch latest changes from origin",
        },
        {
          "exec": "git reset --hard origin/$BRANCH",
          "name": "hard reset to origin commit",
        },
        {
          "exec": "git clean -fdx",
          "name": "clean all untracked files",
        },
        {
          "say": "ready to rock! (unpushed commits are under the "scratch" branch)",
        },
      ],
    },
    "compile": {
      "description": "Only compile",
      "name": "compile",
    },
    "default": {
      "description": "Synthesize project files",
      "name": "default",
      "steps": [
        {
          "exec": "node .projenrc.js",
        },
      ],
    },
    "deploy:my-dev": {
      "name": "deploy:my-dev",
      "steps": [
        {
          "exec": "cdk --app cdk.out --outputs-file cdk-outputs-my-dev.json --progress events --require-approval never deploy testapp-my-dev",
        },
      ],
    },
    "deploy:prod": {
      "name": "deploy:prod",
      "steps": [
        {
          "exec": "cdk --app cdk.out --outputs-file cdk-outputs-prod.json --progress events --require-approval never deploy testapp-prod",
        },
      ],
    },
    "diff:my-dev": {
      "name": "diff:my-dev",
      "steps": [
        {
          "exec": "cdk --app cdk.out diff testapp-my-dev",
        },
      ],
    },
    "diff:prod": {
      "name": "diff:prod",
      "steps": [
        {
          "exec": "cdk --app cdk.out diff testapp-prod",
        },
      ],
    },
    "eject": {
      "description": "Remove projen from the project",
      "env": {
        "PROJEN_EJECTING": "true",
      },
      "name": "eject",
      "steps": [
        {
          "spawn": "default",
        },
      ],
    },
    "eslint": {
      "description": "Runs eslint against the codebase",
      "env": {
        "ESLINT_USE_FLAT_CONFIG": "false",
      },
      "name": "eslint",
      "steps": [
        {
          "exec": "eslint --ext .ts,.tsx --fix --no-error-on-unmatched-pattern $@ src test build-tools .projenrc.js",
          "receiveArgs": true,
        },
      ],
    },
    "fastdiff:my-dev": {
      "name": "fastdiff:my-dev",
      "steps": [
        {
          "exec": "cdk --app cdk.out diff --no-changeset testapp-my-dev",
        },
      ],
    },
    "fastdiff:prod": {
      "name": "fastdiff:prod",
      "steps": [
        {
          "exec": "cdk --app cdk.out diff --no-changeset testapp-prod",
        },
      ],
    },
    "install": {
      "description": "Install project dependencies and update lockfile (non-frozen)",
      "name": "install",
      "steps": [
        {
          "exec": "yarn install --check-files",
        },
      ],
    },
    "install:ci": {
      "description": "Install project dependencies using frozen lockfile",
      "name": "install:ci",
      "steps": [
        {
          "exec": "yarn install --check-files --frozen-lockfile",
        },
      ],
    },
    "package": {
      "description": "Creates the distribution package",
      "name": "package",
    },
    "post-compile": {
      "description": "Runs after successful compilation",
      "name": "post-compile",
      "steps": [
        {
          "spawn": "synth:silent",
        },
      ],
    },
    "post-upgrade": {
      "description": "Runs after upgrading dependencies",
      "name": "post-upgrade",
    },
    "pre-compile": {
      "description": "Prepare the project for compilation",
      "name": "pre-compile",
    },
    "publish:assets": {
      "name": "publish:assets",
      "steps": [
        {
          "spawn": "publish:assets:my-dev",
        },
        {
          "spawn": "publish:assets:prod",
        },
      ],
    },
    "publish:assets:my-dev": {
      "name": "publish:assets:my-dev",
      "steps": [
        {
          "exec": "npx cdk-assets -p cdk.out/testapp-my-dev.assets.json publish",
        },
      ],
    },
    "publish:assets:prod": {
      "name": "publish:assets:prod",
      "steps": [
        {
          "exec": "npx cdk-assets -p cdk.out/testapp-prod.assets.json publish",
        },
      ],
    },
    "release:push-assembly": {
      "name": "release:push-assembly",
      "steps": [
        {
          "exec": "pipelines-release create-manifest "cdk.out"  "@assembly"",
        },
        {
          "cwd": "cdk.out",
          "exec": "npm version --no-git-tag-version from-git",
        },
        {
          "cwd": "cdk.out",
          "exec": "npm publish",
        },
      ],
    },
    "synth": {
      "description": "Synthesizes your cdk app into cdk.out",
      "name": "synth",
      "steps": [
        {
          "exec": "rm -rf cdk.out",
        },
        {
          "exec": "cdk synth",
        },
      ],
    },
    "synth:silent": {
      "description": "Synthesizes your cdk app into cdk.out and suppresses the template in stdout (part of "yarn build")",
      "name": "synth:silent",
      "steps": [
        {
          "exec": "rm -rf cdk.out",
        },
        {
          "exec": "cdk synth -q",
        },
      ],
    },
    "test": {
      "description": "Run tests",
      "name": "test",
      "steps": [
        {
          "exec": "jest --passWithNoTests --updateSnapshot",
          "receiveArgs": true,
        },
        {
          "spawn": "eslint",
        },
      ],
    },
    "test:watch": {
      "description": "Run jest in watch mode",
      "name": "test:watch",
      "steps": [
        {
          "exec": "jest --watch",
        },
      ],
    },
    "upgrade": {
      "description": "upgrade dependencies",
      "env": {
        "CI": "0",
      },
      "name": "upgrade",
      "steps": [
        {
          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --no-deprecated --dep=dev,peer,prod,optional --filter=@types/jest,@types/node,@types/standard-version,cdk-assets,esbuild,eslint-import-resolver-typescript,eslint-plugin-import,jest,projen,standard-version,ts-jest,ts-node,typescript",
        },
        {
          "exec": "yarn install --check-files",
        },
        {
          "exec": "yarn upgrade @stylistic/eslint-plugin @types/jest @types/node @types/standard-version @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk cdk-assets esbuild eslint-import-resolver-typescript eslint-plugin-import eslint jest jest-junit projen standard-version ts-jest ts-node typescript aws-cdk-lib constructs",
        },
        {
          "exec": "npx projen",
        },
        {
          "spawn": "post-upgrade",
        },
      ],
    },
  },
}
`;

exports[`Github snapshot with custom node version 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  synth:
    name: Synth CDK application
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: 22.0.0
      - name: Checkout
        uses: actions/checkout@v4
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: synthRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen build
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cloud-assembly
          path: cdk.out/
  assetUpload:
    name: Publish assets to AWS
    needs: synth
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: 22.0.0
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - run: git config --global user.name "github-actions" && git config --global user.email "github-actions@github.com"
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: publishRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets
"
`;

exports[`Github snapshot with custom runner 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  synth:
    name: Synth CDK application
    needs: []
    runs-on: custom-runner
    permissions:
      contents: read
      id-token: write
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: synthRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen build
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cloud-assembly
          path: cdk.out/
  assetUpload:
    name: Publish assets to AWS
    needs: synth
    runs-on: custom-runner
    permissions:
      id-token: write
      contents: read
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - run: git config --global user.name "github-actions" && git config --global user.email "github-actions@github.com"
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: publishRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets
"
`;

exports[`Github snapshot with empty prefix for independent stages 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  synth:
    name: Synth CDK application
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: synthRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen build
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cloud-assembly
          path: cdk.out/
  assetUpload:
    name: Publish assets to AWS
    needs: synth
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - run: git config --global user.name "github-actions" && git config --global user.email "github-actions@github.com"
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: publishRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets
  deploy-independent2:
    name: Deploy stage independent2 to AWS
    needs: assetUpload
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: deploy-independent2
      cancel-in-progress: false
    env:
      CI: "true"
      TEST: me
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-session-name: GitHubAction
          aws-region: eu-central-2
      - run: npx projen deploy:independent2
      - run: echo Post Deploy
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-independent2
          path: cdk-outputs-independent2.json
"
`;

exports[`Github snapshot with empty prefix for independent stages 2`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy-independent1
on:
  workflow_dispatch: {}
jobs:
  deploy:
    name: Release stage independent1 to AWS
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: deploy-independent1
      cancel-in-progress: false
    env:
      CI: "true"
      TEST: me
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: synthRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen build
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: deployRole
          role-session-name: GitHubAction
          aws-region: eu-west-2
      - run: npx projen diff:independent1
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: deployRole
          role-session-name: GitHubAction
          aws-region: eu-west-2
      - run: npx projen deploy:independent1
      - run: echo Post Deploy
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-independent1
          path: cdk-outputs-independent1.json
"
`;

exports[`Github snapshot with empty prefix for independent stages 3`] = `undefined`;

exports[`Github snapshot with empty prefix for independent stages 4`] = `
"// ~~ Generated by projen
/* eslint-disable */
import { App, AppProps, Stack, StackProps } from 'aws-cdk-lib';




/**
 * PipelineAppProps is an extension of AppProps, which is part of the AWS CDK core.
 * It includes optional functions to provide AWS Stacks for different stages.
 *
 * Use these functions to instantiate your application stacks with the parameters for
 * each stage
 */
export interface PipelineAppProps extends AppProps {
  /** This function will be used to generate a independent1 stack. */
  provideIndependent1Stack: (app: App, stackId: string, props: PipelineAppStackProps) => Stack;
  /** This function will be used to generate a independent2 stack. */
  provideIndependent2Stack: (app: App, stackId: string, props: PipelineAppStackProps) => Stack;

}

/**
 * PipelineAppStackProps is an extension of StackProps, which is part of the AWS CDK core.
 * It includes an additional property to specify the stage name.
 */
export interface PipelineAppStackProps extends StackProps {
  stageName: string;
}

/**
 * The PipelineApp class extends the App class from AWS CDK and overrides the constructor to support
 * different stages of the application (development, production, personal, feature) by invoking the provided
 * stack-providing functions from the props.
 */
export class PipelineApp extends App {
  constructor(props: PipelineAppProps) {
    super(props);

    // If a function is provided for creating a independent1 stack, it is called with necessary arguments.
    if (props.provideIndependent1Stack) {
      props.provideIndependent1Stack(this, 'independent1', { env: { account: '123456789012', region: 'eu-west-2' }, stackName: 'independent1', stageName: 'independent1' });
    }
    // If a function is provided for creating a independent2 stack, it is called with necessary arguments.
    if (props.provideIndependent2Stack) {
      props.provideIndependent2Stack(this, 'independent2', { env: { account: '123456789012', region: 'eu-central-2' }, stackName: 'independent2', stageName: 'independent2' });
    }


  }
}
"
`;

exports[`Github snapshot with empty prefix for stages 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  synth:
    name: Synth CDK application
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: synthRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen build
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cloud-assembly
          path: cdk.out/
  assetUpload:
    name: Publish assets to AWS
    needs: synth
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - run: git config --global user.name "github-actions" && git config --global user.email "github-actions@github.com"
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: publishRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets
  deploy-stage1:
    name: Deploy stage stage1 to AWS
    needs: assetUpload
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: deploy-stage1
      cancel-in-progress: false
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: deployRole1
          role-session-name: GitHubAction
          aws-region: eu-west-2
      - run: npx projen deploy:stage1
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-stage1
          path: cdk-outputs-stage1.json
  deploy-stage2:
    name: Deploy stage stage2 to AWS
    needs:
      - assetUpload
      - deploy-stage1
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: deploy-stage2
      cancel-in-progress: false
    env:
      CI: "true"
      TEST: me
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: deployRole2
          role-session-name: GitHubAction
          aws-region: us-central-2
      - run: npx projen deploy:stage2
      - run: echo Post Deploy
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-stage2
          path: cdk-outputs-stage2.json
"
`;

exports[`Github snapshot with empty prefix for stages 2`] = `undefined`;

exports[`Github snapshot with empty prefix for stages 3`] = `undefined`;

exports[`Github snapshot with empty prefix for stages 4`] = `
"// ~~ Generated by projen
/* eslint-disable */
import { App, AppProps, Stack, StackProps } from 'aws-cdk-lib';




/**
 * PipelineAppProps is an extension of AppProps, which is part of the AWS CDK core.
 * It includes optional functions to provide AWS Stacks for different stages.
 *
 * Use these functions to instantiate your application stacks with the parameters for
 * each stage
 */
export interface PipelineAppProps extends AppProps {
  /** This function will be used to generate a stage1 stack. */
  provideStage1Stack: (app: App, stackId: string, props: PipelineAppStackProps) => Stack;
  /** This function will be used to generate a stage2 stack. */
  provideStage2Stack: (app: App, stackId: string, props: PipelineAppStackProps) => Stack;

}

/**
 * PipelineAppStackProps is an extension of StackProps, which is part of the AWS CDK core.
 * It includes an additional property to specify the stage name.
 */
export interface PipelineAppStackProps extends StackProps {
  stageName: string;
}

/**
 * The PipelineApp class extends the App class from AWS CDK and overrides the constructor to support
 * different stages of the application (development, production, personal, feature) by invoking the provided
 * stack-providing functions from the props.
 */
export class PipelineApp extends App {
  constructor(props: PipelineAppProps) {
    super(props);

    // If a function is provided for creating a stage1 stack, it is called with necessary arguments.
    if (props.provideStage1Stack) {
      props.provideStage1Stack(this, 'stage1', { env: { account: '123456789012', region: 'eu-west-2' }, stackName: 'stage1', stageName: 'stage1' });
    }
    // If a function is provided for creating a stage2 stack, it is called with necessary arguments.
    if (props.provideStage2Stack) {
      props.provideStage2Stack(this, 'stage2', { env: { account: '123456789012', region: 'us-central-2' }, stackName: 'stage2', stageName: 'stage2' });
    }


  }
}
"
`;

exports[`Github snapshot with environment 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  synth:
    name: Synth CDK application
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: synthRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen build
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cloud-assembly
          path: cdk.out/
  assetUpload:
    name: Publish assets to AWS
    needs: synth
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: write
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - run: git config --global user.name "github-actions" && git config --global user.email "github-actions@github.com"
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: publishRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets
      - run: npx projen bump
      - run: npx projen release:push-assembly
  deploy-my-dev:
    name: Deploy stage my-dev to AWS
    needs: assetUpload
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    environment: my-dev
    concurrency:
      group: deploy-my-dev
      cancel-in-progress: false
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: devRole
          role-session-name: GitHubAction
          aws-region: eu-central-1
      - run: npx projen deploy:my-dev
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-my-dev
          path: cdk-outputs-my-dev.json
  deploy-independent:
    name: Deploy stage independent to AWS
    needs: assetUpload
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    environment: independent
    concurrency:
      group: deploy-independent
      cancel-in-progress: false
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: independentRole
          role-session-name: GitHubAction
          aws-region: eu-central-1
      - run: npx projen deploy:independent
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-independent
          path: cdk-outputs-independent.json
"
`;

exports[`Github snapshot with environment 2`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release-prod
on:
  workflow_dispatch:
    inputs:
      version:
        description: Package version
        required: true
jobs:
  deploy:
    name: Release stage prod to AWS
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    environment: prod
    concurrency:
      group: deploy-prod
      cancel-in-progress: false
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: npx projen install:ci
      - run: yarn add @assembly/testapp@\${{github.event.inputs.version}}
      - run: mv ./node_modules/@assembly/testapp cdk.out
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: prodRole
          role-session-name: GitHubAction
          aws-region: eu-central-1
      - run: npx projen deploy:prod
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-prod
          path: cdk-outputs-prod.json
"
`;

exports[`Github snapshot with feature stages 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy-feature
on:
  pull_request_target:
    types:
      - synchronize
      - labeled
      - opened
      - reopened
  workflow_dispatch: {}
jobs:
  synth-and-deploy:
    name: Synth and deploy CDK application to feature stage
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: deploy-feature-\${{ github.event.pull_request.number }}
      cancel-in-progress: false
    env:
      CI: "true"
      BRANCH: \${{ github.head_ref }}
    if: contains(join(github.event.pull_request.labels.*.name, ','), 'feature-deployment')
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: synthRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen build
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: featureRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen deploy:feature
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-feature
          path: cdk-outputs-feature.json
"
`;

exports[`Github snapshot with feature stages 2`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: destroy-feature
on:
  pull_request_target:
    types:
      - closed
      - unlabeled
  workflow_dispatch: {}
jobs:
  destroy-feature:
    name: Destroy CDK feature stage
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: destroy-feature-\${{ github.event.pull_request.number }}
      cancel-in-progress: false
    env:
      CI: "true"
      BRANCH: \${{ github.head_ref }}
    if: github.event.action == 'closed' || (github.event.action == 'unlabeled' && github.event.label.name == 'feature-deployment')
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: synthRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen build
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: featureRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen destroy:feature
"
`;

exports[`Github snapshot with feature stages 3`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "env": {
    "PATH": "$(npx -c "node --print process.env.PATH")",
  },
  "tasks": {
    "build": {
      "description": "Full release build",
      "name": "build",
      "steps": [
        {
          "spawn": "default",
        },
        {
          "spawn": "pre-compile",
        },
        {
          "spawn": "compile",
        },
        {
          "spawn": "post-compile",
        },
        {
          "spawn": "test",
        },
        {
          "spawn": "package",
        },
      ],
    },
    "bundle": {
      "description": "Prepare assets",
      "name": "bundle",
    },
    "clobber": {
      "condition": "git diff --exit-code > /dev/null",
      "description": "hard resets to HEAD of origin and cleans the local repo",
      "env": {
        "BRANCH": "$(git branch --show-current)",
      },
      "name": "clobber",
      "steps": [
        {
          "exec": "git checkout -b scratch",
          "name": "save current HEAD in "scratch" branch",
        },
        {
          "exec": "git checkout $BRANCH",
        },
        {
          "exec": "git fetch origin",
          "name": "fetch latest changes from origin",
        },
        {
          "exec": "git reset --hard origin/$BRANCH",
          "name": "hard reset to origin commit",
        },
        {
          "exec": "git clean -fdx",
          "name": "clean all untracked files",
        },
        {
          "say": "ready to rock! (unpushed commits are under the "scratch" branch)",
        },
      ],
    },
    "compile": {
      "description": "Only compile",
      "name": "compile",
    },
    "default": {
      "description": "Synthesize project files",
      "name": "default",
      "steps": [
        {
          "exec": "node .projenrc.js",
        },
      ],
    },
    "deploy:dev": {
      "name": "deploy:dev",
      "steps": [
        {
          "exec": "cdk --app cdk.out --outputs-file cdk-outputs-dev.json --progress events --require-approval never deploy testapp-dev",
        },
      ],
    },
    "deploy:feature": {
      "name": "deploy:feature",
      "steps": [
        {
          "exec": "cdk --outputs-file cdk-outputs-feature.json --progress events --require-approval never deploy testapp-feature",
        },
      ],
    },
    "destroy:feature": {
      "name": "destroy:feature",
      "steps": [
        {
          "exec": "cdk destroy --force testapp-feature",
        },
      ],
    },
    "diff:dev": {
      "name": "diff:dev",
      "steps": [
        {
          "exec": "cdk --app cdk.out diff testapp-dev",
        },
      ],
    },
    "diff:feature": {
      "name": "diff:feature",
      "steps": [
        {
          "exec": "cdk diff testapp-feature",
        },
      ],
    },
    "eject": {
      "description": "Remove projen from the project",
      "env": {
        "PROJEN_EJECTING": "true",
      },
      "name": "eject",
      "steps": [
        {
          "spawn": "default",
        },
      ],
    },
    "eslint": {
      "description": "Runs eslint against the codebase",
      "env": {
        "ESLINT_USE_FLAT_CONFIG": "false",
      },
      "name": "eslint",
      "steps": [
        {
          "exec": "eslint --ext .ts,.tsx --fix --no-error-on-unmatched-pattern $@ src test build-tools .projenrc.js",
          "receiveArgs": true,
        },
      ],
    },
    "fastdiff:dev": {
      "name": "fastdiff:dev",
      "steps": [
        {
          "exec": "cdk --app cdk.out diff --no-changeset testapp-dev",
        },
      ],
    },
    "fastdiff:feature": {
      "name": "fastdiff:feature",
      "steps": [
        {
          "exec": "cdk diff --no-changeset testapp-feature",
        },
      ],
    },
    "install": {
      "description": "Install project dependencies and update lockfile (non-frozen)",
      "name": "install",
      "steps": [
        {
          "exec": "yarn install --check-files",
        },
      ],
    },
    "install:ci": {
      "description": "Install project dependencies using frozen lockfile",
      "name": "install:ci",
      "steps": [
        {
          "exec": "yarn install --check-files --frozen-lockfile",
        },
      ],
    },
    "package": {
      "description": "Creates the distribution package",
      "name": "package",
    },
    "post-compile": {
      "description": "Runs after successful compilation",
      "name": "post-compile",
      "steps": [
        {
          "spawn": "synth:silent",
        },
      ],
    },
    "post-upgrade": {
      "description": "Runs after upgrading dependencies",
      "name": "post-upgrade",
    },
    "pre-compile": {
      "description": "Prepare the project for compilation",
      "name": "pre-compile",
    },
    "publish:assets": {
      "name": "publish:assets",
      "steps": [
        {
          "spawn": "publish:assets:dev",
        },
      ],
    },
    "publish:assets:dev": {
      "name": "publish:assets:dev",
      "steps": [
        {
          "exec": "npx cdk-assets -p cdk.out/testapp-dev.assets.json publish",
        },
      ],
    },
    "synth": {
      "description": "Synthesizes your cdk app into cdk.out",
      "name": "synth",
      "steps": [
        {
          "exec": "rm -rf cdk.out",
        },
        {
          "exec": "cdk synth",
        },
      ],
    },
    "synth:silent": {
      "description": "Synthesizes your cdk app into cdk.out and suppresses the template in stdout (part of "yarn build")",
      "name": "synth:silent",
      "steps": [
        {
          "exec": "rm -rf cdk.out",
        },
        {
          "exec": "cdk synth -q",
        },
      ],
    },
    "test": {
      "description": "Run tests",
      "name": "test",
      "steps": [
        {
          "exec": "jest --passWithNoTests --updateSnapshot",
          "receiveArgs": true,
        },
        {
          "spawn": "eslint",
        },
      ],
    },
    "test:watch": {
      "description": "Run jest in watch mode",
      "name": "test:watch",
      "steps": [
        {
          "exec": "jest --watch",
        },
      ],
    },
    "upgrade": {
      "description": "upgrade dependencies",
      "env": {
        "CI": "0",
      },
      "name": "upgrade",
      "steps": [
        {
          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --no-deprecated --dep=dev,peer,prod,optional --filter=@types/jest,@types/node,@types/standard-version,cdk-assets,esbuild,eslint-import-resolver-typescript,eslint-plugin-import,jest,projen,standard-version,ts-jest,ts-node,typescript",
        },
        {
          "exec": "yarn install --check-files",
        },
        {
          "exec": "yarn upgrade @stylistic/eslint-plugin @types/jest @types/node @types/standard-version @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk cdk-assets esbuild eslint-import-resolver-typescript eslint-plugin-import eslint jest jest-junit projen standard-version ts-jest ts-node typescript aws-cdk-lib constructs",
        },
        {
          "exec": "npx projen",
        },
        {
          "spawn": "post-upgrade",
        },
      ],
    },
    "watch:feature": {
      "name": "watch:feature",
      "steps": [
        {
          "exec": "cdk deploy --outputs-file cdk-outputs-feature.json --watch --hotswap testapp-feature",
        },
      ],
    },
  },
}
`;

exports[`Github snapshot with independent stage 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  synth:
    name: Synth CDK application
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: synthRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen build
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cloud-assembly
          path: cdk.out/
  assetUpload:
    name: Publish assets to AWS
    needs: synth
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - run: git config --global user.name "github-actions" && git config --global user.email "github-actions@github.com"
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: publishRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets
  deploy-independent2:
    name: Deploy stage independent2 to AWS
    needs: assetUpload
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: deploy-independent2
      cancel-in-progress: false
    env:
      CI: "true"
      FOO: bar
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-session-name: GitHubAction
          aws-region: eu-central-1
      - run: npx projen deploy:independent2
      - run: echo Post Deploy
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-independent2
          path: cdk-outputs-independent2.json
"
`;

exports[`Github snapshot with independent stage 2`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy-independent1
on:
  workflow_dispatch: {}
jobs:
  deploy:
    name: Release stage independent1 to AWS
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: deploy-independent1
      cancel-in-progress: false
    env:
      CI: "true"
      FOO: bar
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: synthRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen build
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: deployRole
          role-session-name: GitHubAction
          aws-region: eu-central-1
      - run: npx projen diff:independent1
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: deployRole
          role-session-name: GitHubAction
          aws-region: eu-central-1
      - run: npx projen deploy:independent1
      - run: echo Post Deploy
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-independent1
          path: cdk-outputs-independent1.json
"
`;

exports[`Github snapshot with manual approval and GH packages 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

@assembly:registry=https://npm.pkg.github.com
//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}
//npm.pkg.github.com/:always-auth=true
"
`;

exports[`Github snapshot with manual approval and GH packages 2`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  synth:
    name: Synth CDK application
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      packages: read
      id-token: write
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: echo "GITHUB_TOKEN=\${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: synthRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen build
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cloud-assembly
          path: cdk.out/
  assetUpload:
    name: Publish assets to AWS
    needs: synth
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: write
      packages: write
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - run: git config --global user.name "github-actions" && git config --global user.email "github-actions@github.com"
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: echo "GITHUB_TOKEN=\${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: publishRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets
      - run: npx projen bump
      - run: npx projen release:push-assembly
"
`;

exports[`Github snapshot with manual approval and GH packages 3`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: release-prod
on:
  workflow_dispatch:
    inputs:
      version:
        description: Package version
        required: true
jobs:
  deploy:
    name: Release stage prod to AWS
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      packages: read
      id-token: write
    concurrency:
      group: deploy-prod
      cancel-in-progress: false
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: echo "GITHUB_TOKEN=\${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
      - run: npx projen install:ci
      - run: yarn add @assembly/testapp@\${{github.event.inputs.version}}
      - run: mv ./node_modules/@assembly/testapp cdk.out
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-session-name: GitHubAction
          aws-region: eu-central-1
      - run: npx projen deploy:prod
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-prod
          path: cdk-outputs-prod.json
"
`;

exports[`Github snapshot with multi stack 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  synth:
    name: Synth CDK application
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: synthRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen build
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cloud-assembly
          path: cdk.out/
  assetUpload:
    name: Publish assets to AWS
    needs: synth
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - run: git config --global user.name "github-actions" && git config --global user.email "github-actions@github.com"
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: publishRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets
  deploy-dev:
    name: Deploy stage dev to AWS
    needs: assetUpload
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: deploy-dev
      cancel-in-progress: false
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: devRole
          role-session-name: GitHubAction
          aws-region: eu-central-1
      - run: npx projen deploy:dev
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-dev
          path: cdk-outputs-dev.json
"
`;

exports[`Github snapshot with multi stack 2`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "env": {
    "PATH": "$(npx -c "node --print process.env.PATH")",
  },
  "tasks": {
    "build": {
      "description": "Full release build",
      "name": "build",
      "steps": [
        {
          "spawn": "default",
        },
        {
          "spawn": "pre-compile",
        },
        {
          "spawn": "compile",
        },
        {
          "spawn": "post-compile",
        },
        {
          "spawn": "test",
        },
        {
          "spawn": "package",
        },
      ],
    },
    "bundle": {
      "description": "Prepare assets",
      "name": "bundle",
    },
    "clobber": {
      "condition": "git diff --exit-code > /dev/null",
      "description": "hard resets to HEAD of origin and cleans the local repo",
      "env": {
        "BRANCH": "$(git branch --show-current)",
      },
      "name": "clobber",
      "steps": [
        {
          "exec": "git checkout -b scratch",
          "name": "save current HEAD in "scratch" branch",
        },
        {
          "exec": "git checkout $BRANCH",
        },
        {
          "exec": "git fetch origin",
          "name": "fetch latest changes from origin",
        },
        {
          "exec": "git reset --hard origin/$BRANCH",
          "name": "hard reset to origin commit",
        },
        {
          "exec": "git clean -fdx",
          "name": "clean all untracked files",
        },
        {
          "say": "ready to rock! (unpushed commits are under the "scratch" branch)",
        },
      ],
    },
    "compile": {
      "description": "Only compile",
      "name": "compile",
    },
    "default": {
      "description": "Synthesize project files",
      "name": "default",
      "steps": [
        {
          "exec": "node .projenrc.js",
        },
      ],
    },
    "deploy:dev": {
      "name": "deploy:dev",
      "steps": [
        {
          "exec": "cdk --app cdk.out --outputs-file cdk-outputs-dev.json --progress events --require-approval never deploy testapp-dev testapp-dev/*",
        },
      ],
    },
    "diff:dev": {
      "name": "diff:dev",
      "steps": [
        {
          "exec": "cdk --app cdk.out diff testapp-dev testapp-dev/*",
        },
      ],
    },
    "eject": {
      "description": "Remove projen from the project",
      "env": {
        "PROJEN_EJECTING": "true",
      },
      "name": "eject",
      "steps": [
        {
          "spawn": "default",
        },
      ],
    },
    "eslint": {
      "description": "Runs eslint against the codebase",
      "env": {
        "ESLINT_USE_FLAT_CONFIG": "false",
      },
      "name": "eslint",
      "steps": [
        {
          "exec": "eslint --ext .ts,.tsx --fix --no-error-on-unmatched-pattern $@ src test build-tools .projenrc.js",
          "receiveArgs": true,
        },
      ],
    },
    "fastdiff:dev": {
      "name": "fastdiff:dev",
      "steps": [
        {
          "exec": "cdk --app cdk.out diff --no-changeset testapp-dev testapp-dev/*",
        },
      ],
    },
    "install": {
      "description": "Install project dependencies and update lockfile (non-frozen)",
      "name": "install",
      "steps": [
        {
          "exec": "yarn install --check-files",
        },
      ],
    },
    "install:ci": {
      "description": "Install project dependencies using frozen lockfile",
      "name": "install:ci",
      "steps": [
        {
          "exec": "yarn install --check-files --frozen-lockfile",
        },
      ],
    },
    "package": {
      "description": "Creates the distribution package",
      "name": "package",
    },
    "post-compile": {
      "description": "Runs after successful compilation",
      "name": "post-compile",
      "steps": [
        {
          "spawn": "synth:silent",
        },
      ],
    },
    "post-upgrade": {
      "description": "Runs after upgrading dependencies",
      "name": "post-upgrade",
    },
    "pre-compile": {
      "description": "Prepare the project for compilation",
      "name": "pre-compile",
    },
    "publish:assets": {
      "name": "publish:assets",
      "steps": [
        {
          "spawn": "publish:assets:dev",
        },
      ],
    },
    "publish:assets:dev": {
      "name": "publish:assets:dev",
      "steps": [
        {
          "exec": "npx cdk-assets -p cdk.out/testapp-dev.assets.json publish",
        },
      ],
    },
    "synth": {
      "description": "Synthesizes your cdk app into cdk.out",
      "name": "synth",
      "steps": [
        {
          "exec": "rm -rf cdk.out",
        },
        {
          "exec": "cdk synth",
        },
      ],
    },
    "synth:silent": {
      "description": "Synthesizes your cdk app into cdk.out and suppresses the template in stdout (part of "yarn build")",
      "name": "synth:silent",
      "steps": [
        {
          "exec": "rm -rf cdk.out",
        },
        {
          "exec": "cdk synth -q",
        },
      ],
    },
    "test": {
      "description": "Run tests",
      "name": "test",
      "steps": [
        {
          "exec": "jest --passWithNoTests --updateSnapshot",
          "receiveArgs": true,
        },
        {
          "spawn": "eslint",
        },
      ],
    },
    "test:watch": {
      "description": "Run jest in watch mode",
      "name": "test:watch",
      "steps": [
        {
          "exec": "jest --watch",
        },
      ],
    },
    "upgrade": {
      "description": "upgrade dependencies",
      "env": {
        "CI": "0",
      },
      "name": "upgrade",
      "steps": [
        {
          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --no-deprecated --dep=dev,peer,prod,optional --filter=@types/jest,@types/node,@types/standard-version,cdk-assets,esbuild,eslint-import-resolver-typescript,eslint-plugin-import,jest,projen,standard-version,ts-jest,ts-node,typescript",
        },
        {
          "exec": "yarn install --check-files",
        },
        {
          "exec": "yarn upgrade @stylistic/eslint-plugin @types/jest @types/node @types/standard-version @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk cdk-assets esbuild eslint-import-resolver-typescript eslint-plugin-import eslint jest jest-junit projen standard-version ts-jest ts-node typescript aws-cdk-lib constructs",
        },
        {
          "exec": "npx projen",
        },
        {
          "spawn": "post-upgrade",
        },
      ],
    },
  },
}
`;

exports[`Github snapshot with preInstallStep 1`] = `undefined`;

exports[`Github snapshot with preInstallStep 2`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  synth:
    name: Synth CDK application
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    env:
      CI: "true"
      FOO: bar
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: echo Login
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: synthRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen build
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cloud-assembly
          path: cdk.out/
  assetUpload:
    name: Publish assets to AWS
    needs: synth
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
    env:
      CI: "true"
      FOO: bar
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - run: git config --global user.name "github-actions" && git config --global user.email "github-actions@github.com"
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: echo Login
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: publishRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets
  deploy-prod:
    name: Deploy stage prod to AWS
    needs: assetUpload
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: deploy-prod
      cancel-in-progress: false
    env:
      CI: "true"
      FOO: bar
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: echo Login
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-session-name: GitHubAction
          aws-region: eu-central-1
      - run: npx projen deploy:prod
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-prod
          path: cdk-outputs-prod.json
"
`;

exports[`Github snapshot with versioning enabled 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  synth:
    name: Synth CDK application
    needs: []
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: synthRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen build
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cloud-assembly
          path: cdk.out/
  assetUpload:
    name: Publish assets to AWS
    needs: synth
    runs-on: ubuntu-latest
    permissions:
      id-token: write
      contents: read
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - run: git config --global user.name "github-actions" && git config --global user.email "github-actions@github.com"
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: publishRole
          role-session-name: GitHubAction
          aws-region: us-east-1
      - run: npx projen publish:assets
  deploy-dev:
    name: Deploy stage dev to AWS
    needs: assetUpload
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: deploy-dev
      cancel-in-progress: false
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: devRole
          role-session-name: GitHubAction
          aws-region: eu-central-1
      - run: npx projen deploy:dev
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-dev
          path: cdk-outputs-dev.json
  deploy-prod:
    name: Deploy stage prod to AWS
    needs:
      - assetUpload
      - deploy-dev
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    concurrency:
      group: deploy-prod
      cancel-in-progress: false
    env:
      CI: "true"
    steps:
      - uses: actions/setup-node@v4
        with:
          node-version: "20"
      - name: Checkout
        uses: actions/checkout@v4
      - name: Download Artifact
        uses: actions/download-artifact@v4
        with:
          name: cloud-assembly
          path: cdk.out/
      - run: npx projen install:ci
      - name: AWS Credentials
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: prodRole
          role-session-name: GitHubAction
          aws-region: eu-central-1
      - run: npx projen deploy:prod
      - name: Upload Artifact
        uses: actions/upload-artifact@v4.3.6
        with:
          name: cdk-outputs-prod
          path: cdk-outputs-prod.json
"
`;

exports[`Github snapshot with versioning enabled 2`] = `
"// ~~ Generated by projen
/* eslint-disable */
import { App, AppProps, Stack, StackProps } from 'aws-cdk-lib';
import { CfnOutput } from 'aws-cdk-lib';
import { StringParameter } from 'aws-cdk-lib/aws-ssm';
import * as fs from 'fs';

const versioningConfig = {
  "enabled": true,
  "outputs": {
    "cloudFormation": {
      "enabled": true
    },
    "parameterStore": {
      "enabled": true,
      "parameterName": "/{stackName}/version"
    }
  },
  "strategy": {
    "format": "{commit-count}",
    "components": {
      "commitCount": {
        "countFrom": "all"
      }
    }
  }
};


/**
 * Version information interface
 */
export interface VersionInfo {
  version: string;
  commitHash: string;
  commitHashShort: string;
  branch: string;
  commitCount: number;
  packageVersion: string;
  deployedAt: string;
  deployedBy: string;
  environment: string;
}

/**
 * Load version information from generated file
 */
export function loadVersionInfo(): VersionInfo {
  try {
    return JSON.parse(fs.readFileSync('~version.json', 'utf8'));
  } catch (error) {
    console.warn('Could not load version info, using fallback');
    return {
      version: '0.0.0',
      commitHash: 'unknown',
      commitHashShort: 'unknown',
      branch: 'unknown',
      commitCount: 0,
      packageVersion: '0.0.0',
      deployedAt: new Date().toISOString(),
      deployedBy: 'unknown',
      environment: 'unknown'
    };
  }
}

/**
 * Get versioning configuration for a specific stage
 */
function getStageConfig(stageName: string, baseConfig: any, stageOverrides?: Record<string, any>): any {
  if (!stageOverrides || !stageOverrides[stageName]) {
    return baseConfig;
  }
  
  // Merge stage override with base config
  const override = stageOverrides[stageName];
  return {
    ...baseConfig,
    outputs: {
      cloudFormation: override.outputs?.cloudFormation || baseConfig.outputs.cloudFormation,
      parameterStore: override.outputs?.parameterStore || baseConfig.outputs.parameterStore,
    }
  };
}

/**
 * Add versioning outputs to a stack
 */
function addVersioningToStack(stack: Stack, stageName: string, stageOverrides?: any): void {
  const versionInfo = loadVersionInfo();
  const baseConfig = versioningConfig;
  const config = getStageConfig(stageName, baseConfig, stageOverrides);
  
  // Check if format is specified in CloudFormation or ParameterStore configs
  const cfFormat = config.outputs.cloudFormation?.format || 'structured';
  const ssmFormat = config.outputs.parameterStore?.format || 'structured';
  
  // Add CloudFormation outputs
  if (config.outputs.cloudFormation?.enabled) {
    if (cfFormat === 'plain') {
      // Plain format - single output with version string
      new CfnOutput(stack, 'AppVersion', {
        value: versionInfo.version,
        description: 'Application version',
        exportName: config.outputs.cloudFormation.exportName,
      });
    } else {
      // Structured format - multiple outputs
      new CfnOutput(stack, 'AppVersion', {
        value: versionInfo.version,
        description: 'Application version',
        exportName: config.outputs.cloudFormation.exportName,
      });
      
      new CfnOutput(stack, 'AppVersionCommitHash', {
        value: versionInfo.commitHash,
        description: 'Git commit hash',
        exportName: config.outputs.cloudFormation.exportName ? \`\${config.outputs.cloudFormation.exportName}CommitHash\` : undefined,
      });
      
      new CfnOutput(stack, 'AppVersionBranch', {
        value: versionInfo.branch,
        description: 'Git branch',
        exportName: config.outputs.cloudFormation.exportName ? \`\${config.outputs.cloudFormation.exportName}Branch\` : undefined,
      });

      new CfnOutput(stack, 'AppVersionInfo', {
        value: JSON.stringify(versionInfo),
        description: 'Complete version information',
        exportName: config.outputs.cloudFormation.exportName ? \`\${config.outputs.cloudFormation.exportName}Info\` : undefined,
      });
    }
  }
  
  // Add SSM Parameter Store parameters
  if (config.outputs.parameterStore?.enabled) {
    if (config.outputs.parameterStore.hierarchical) {
      // Hierarchical parameters
      const baseParameterName = (config.outputs.parameterStore.parameterName || '/{stackName}/version')
        .replace('{stackName}', stack.stackName)
        .replace('{stageName}', stageName);
        
      // Create hierarchical parameters
      new StringParameter(stack, 'VersionParameterVersion', {
        parameterName: \`\${baseParameterName}/version\`,
        stringValue: versionInfo.version,
        description: 'Application version',
      });
      
      new StringParameter(stack, 'VersionParameterCommitHash', {
        parameterName: \`\${baseParameterName}/commitHash\`,
        stringValue: versionInfo.commitHash,
        description: 'Git commit hash',
      });
      
      new StringParameter(stack, 'VersionParameterBranch', {
        parameterName: \`\${baseParameterName}/branch\`,
        stringValue: versionInfo.branch,
        description: 'Git branch',
      });
      
      new StringParameter(stack, 'VersionParameterInfo', {
        parameterName: \`\${baseParameterName}/info\`,
        stringValue: JSON.stringify(versionInfo),
        description: 'Complete version information',
      });
    } else {
      // Single parameter
      const parameterName = (config.outputs.parameterStore.parameterName || '/{stackName}/version')
        .replace('{stackName}', stack.stackName)
        .replace('{stageName}', stageName);
        
      new StringParameter(stack, 'VersionParameter', {
        parameterName,
        stringValue: ssmFormat === 'plain' ? versionInfo.version : JSON.stringify(versionInfo),
        description: ssmFormat === 'plain' ? 'Application version' : 'Complete version information',
      });
    }
  }
}

/**
 * PipelineAppProps is an extension of AppProps, which is part of the AWS CDK core.
 * It includes optional functions to provide AWS Stacks for different stages.
 *
 * Use these functions to instantiate your application stacks with the parameters for
 * each stage
 */
export interface PipelineAppProps extends AppProps {
  /** This function will be used to generate a dev stack. */
  provideDevStack: (app: App, stackId: string, props: PipelineAppStackProps) => Stack;
  /** This function will be used to generate a prod stack. */
  provideProdStack: (app: App, stackId: string, props: PipelineAppStackProps) => Stack;

}

/**
 * PipelineAppStackProps is an extension of StackProps, which is part of the AWS CDK core.
 * It includes an additional property to specify the stage name.
 */
export interface PipelineAppStackProps extends StackProps {
  stageName: string;
}

/**
 * The PipelineApp class extends the App class from AWS CDK and overrides the constructor to support
 * different stages of the application (development, production, personal, feature) by invoking the provided
 * stack-providing functions from the props.
 */
export class PipelineApp extends App {
  constructor(props: PipelineAppProps) {
    super(props);

    // If a function is provided for creating a dev stack, it is called with necessary arguments.
    if (props.provideDevStack) {
      props.provideDevStack(this, 'testapp-dev', { env: { account: '123456789012', region: 'eu-central-1' }, stackName: 'testapp-dev', stageName: 'dev' });
    }
    // If a function is provided for creating a prod stack, it is called with necessary arguments.
    if (props.provideProdStack) {
      props.provideProdStack(this, 'testapp-prod', { env: { account: '123456789012', region: 'eu-central-1' }, stackName: 'testapp-prod', stageName: 'prod' });
    }

    // Apply versioning to all stacks
    this.node.children.forEach((child) => {
      if (child instanceof Stack) {
        const stageName = child.stackName.split('-').pop() || 'default';
        addVersioningToStack(child, stageName, undefined);
      }
    });

  }
}
"
`;

exports[`Github snapshot with versioning enabled 3`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": {
    "aws-cdk-lib": "^2.132.0",
    "constructs": "^10.0.5",
  },
  "devDependencies": {
    "@stylistic/eslint-plugin": "^2",
    "@types/jest": "*",
    "@types/node": "*",
    "@types/standard-version": "*",
    "@typescript-eslint/eslint-plugin": "^8",
    "@typescript-eslint/parser": "^8",
    "aws-cdk": "^2",
    "cdk-assets": "*",
    "esbuild": "*",
    "eslint": "^9",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "jest": "*",
    "jest-junit": "^16",
    "projen": "*",
    "standard-version": "*",
    "ts-jest": "*",
    "ts-node": "*",
    "typescript": "*",
  },
  "jest": {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": [
      "/node_modules/",
    ],
    "coverageProvider": "v8",
    "coverageReporters": [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "reporters": [
      "default",
      [
        "jest-junit",
        {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": [
      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.[t]sx?$": [
        "ts-jest",
        {
          "tsconfig": "tsconfig.dev.json",
        },
      ],
    },
    "watchPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "license": "Apache-2.0",
  "name": "testapp",
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "npx projen build",
    "bundle": "npx projen bundle",
    "clobber": "npx projen clobber",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "deploy:dev": "npx projen deploy:dev",
    "deploy:prod": "npx projen deploy:prod",
    "diff:dev": "npx projen diff:dev",
    "diff:prod": "npx projen diff:prod",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "fastdiff:dev": "npx projen fastdiff:dev",
    "fastdiff:prod": "npx projen fastdiff:prod",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "projen": "npx projen",
    "publish:assets": "npx projen publish:assets",
    "publish:assets:dev": "npx projen publish:assets:dev",
    "publish:assets:prod": "npx projen publish:assets:prod",
    "synth": "npx projen synth",
    "synth:silent": "npx projen synth:silent",
    "test": "npx projen test",
    "test:watch": "npx projen test:watch",
    "upgrade": "npx projen upgrade",
    "version:compute": "npx projen version:compute",
    "version:fetch:dev": "npx projen version:fetch:dev",
    "version:fetch:prod": "npx projen version:fetch:prod",
    "version:print": "npx projen version:print",
  },
  "version": "0.0.0",
}
`;

exports[`Github snapshot with versioning enabled 4`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "env": {
    "PATH": "$(npx -c "node --print process.env.PATH")",
  },
  "tasks": {
    "build": {
      "description": "Full release build",
      "name": "build",
      "steps": [
        {
          "spawn": "default",
        },
        {
          "spawn": "pre-compile",
        },
        {
          "spawn": "compile",
        },
        {
          "spawn": "post-compile",
        },
        {
          "spawn": "test",
        },
        {
          "spawn": "package",
        },
      ],
    },
    "bundle": {
      "description": "Prepare assets",
      "name": "bundle",
    },
    "clobber": {
      "condition": "git diff --exit-code > /dev/null",
      "description": "hard resets to HEAD of origin and cleans the local repo",
      "env": {
        "BRANCH": "$(git branch --show-current)",
      },
      "name": "clobber",
      "steps": [
        {
          "exec": "git checkout -b scratch",
          "name": "save current HEAD in "scratch" branch",
        },
        {
          "exec": "git checkout $BRANCH",
        },
        {
          "exec": "git fetch origin",
          "name": "fetch latest changes from origin",
        },
        {
          "exec": "git reset --hard origin/$BRANCH",
          "name": "hard reset to origin commit",
        },
        {
          "exec": "git clean -fdx",
          "name": "clean all untracked files",
        },
        {
          "say": "ready to rock! (unpushed commits are under the "scratch" branch)",
        },
      ],
    },
    "compile": {
      "description": "Only compile",
      "name": "compile",
      "steps": [
        {
          "spawn": "version:compute",
        },
        {
          "spawn": "version:print",
        },
      ],
    },
    "default": {
      "description": "Synthesize project files",
      "name": "default",
      "steps": [
        {
          "exec": "node .projenrc.js",
        },
      ],
    },
    "deploy:dev": {
      "name": "deploy:dev",
      "steps": [
        {
          "exec": "cdk --app cdk.out --outputs-file cdk-outputs-dev.json --progress events --require-approval never deploy testapp-dev",
        },
      ],
    },
    "deploy:prod": {
      "name": "deploy:prod",
      "steps": [
        {
          "exec": "cdk --app cdk.out --outputs-file cdk-outputs-prod.json --progress events --require-approval never deploy testapp-prod",
        },
      ],
    },
    "diff:dev": {
      "name": "diff:dev",
      "steps": [
        {
          "exec": "cdk --app cdk.out diff testapp-dev",
        },
      ],
    },
    "diff:prod": {
      "name": "diff:prod",
      "steps": [
        {
          "exec": "cdk --app cdk.out diff testapp-prod",
        },
      ],
    },
    "eject": {
      "description": "Remove projen from the project",
      "env": {
        "PROJEN_EJECTING": "true",
      },
      "name": "eject",
      "steps": [
        {
          "spawn": "default",
        },
      ],
    },
    "eslint": {
      "description": "Runs eslint against the codebase",
      "env": {
        "ESLINT_USE_FLAT_CONFIG": "false",
      },
      "name": "eslint",
      "steps": [
        {
          "exec": "eslint --ext .ts,.tsx --fix --no-error-on-unmatched-pattern $@ src test build-tools .projenrc.js",
          "receiveArgs": true,
        },
      ],
    },
    "fastdiff:dev": {
      "name": "fastdiff:dev",
      "steps": [
        {
          "exec": "cdk --app cdk.out diff --no-changeset testapp-dev",
        },
      ],
    },
    "fastdiff:prod": {
      "name": "fastdiff:prod",
      "steps": [
        {
          "exec": "cdk --app cdk.out diff --no-changeset testapp-prod",
        },
      ],
    },
    "install": {
      "description": "Install project dependencies and update lockfile (non-frozen)",
      "name": "install",
      "steps": [
        {
          "exec": "yarn install --check-files",
        },
      ],
    },
    "install:ci": {
      "description": "Install project dependencies using frozen lockfile",
      "name": "install:ci",
      "steps": [
        {
          "exec": "yarn install --check-files --frozen-lockfile",
        },
      ],
    },
    "package": {
      "description": "Creates the distribution package",
      "name": "package",
    },
    "post-compile": {
      "description": "Runs after successful compilation",
      "name": "post-compile",
      "steps": [
        {
          "spawn": "synth:silent",
        },
      ],
    },
    "post-upgrade": {
      "description": "Runs after upgrading dependencies",
      "name": "post-upgrade",
    },
    "pre-compile": {
      "description": "Prepare the project for compilation",
      "name": "pre-compile",
    },
    "publish:assets": {
      "name": "publish:assets",
      "steps": [
        {
          "spawn": "publish:assets:dev",
        },
        {
          "spawn": "publish:assets:prod",
        },
      ],
    },
    "publish:assets:dev": {
      "name": "publish:assets:dev",
      "steps": [
        {
          "exec": "npx cdk-assets -p cdk.out/testapp-dev.assets.json publish",
        },
      ],
    },
    "publish:assets:prod": {
      "name": "publish:assets:prod",
      "steps": [
        {
          "exec": "npx cdk-assets -p cdk.out/testapp-prod.assets.json publish",
        },
      ],
    },
    "synth": {
      "description": "Synthesizes your cdk app into cdk.out",
      "name": "synth",
      "steps": [
        {
          "exec": "rm -rf cdk.out",
        },
        {
          "exec": "cdk synth",
        },
      ],
    },
    "synth:silent": {
      "description": "Synthesizes your cdk app into cdk.out and suppresses the template in stdout (part of "yarn build")",
      "name": "synth:silent",
      "steps": [
        {
          "exec": "rm -rf cdk.out",
        },
        {
          "exec": "cdk synth -q",
        },
      ],
    },
    "test": {
      "description": "Run tests",
      "name": "test",
      "steps": [
        {
          "exec": "jest --passWithNoTests --updateSnapshot",
          "receiveArgs": true,
        },
        {
          "spawn": "eslint",
        },
      ],
    },
    "test:watch": {
      "description": "Run jest in watch mode",
      "name": "test:watch",
      "steps": [
        {
          "exec": "jest --watch",
        },
      ],
    },
    "upgrade": {
      "description": "upgrade dependencies",
      "env": {
        "CI": "0",
      },
      "name": "upgrade",
      "steps": [
        {
          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --no-deprecated --dep=dev,peer,prod,optional --filter=@types/jest,@types/node,@types/standard-version,cdk-assets,esbuild,eslint-import-resolver-typescript,eslint-plugin-import,jest,projen,standard-version,ts-jest,ts-node,typescript",
        },
        {
          "exec": "yarn install --check-files",
        },
        {
          "exec": "yarn upgrade @stylistic/eslint-plugin @types/jest @types/node @types/standard-version @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk cdk-assets esbuild eslint-import-resolver-typescript eslint-plugin-import eslint jest jest-junit projen standard-version ts-jest ts-node typescript aws-cdk-lib constructs",
        },
        {
          "exec": "npx projen",
        },
        {
          "spawn": "post-upgrade",
        },
      ],
    },
    "version:compute": {
      "description": "Compute version information from git",
      "name": "version:compute",
      "steps": [
        {
          "exec": "echo "Computing version information..."",
        },
        {
          "exec": "node -e "
const fs = require('fs');
const cp = require('child_process');

// Import versioning modules
const { VersionComputer, VersioningStrategy } = require('projen-pipelines');

try {
  // Gather git information
  const commitHash = cp.execSync('git rev-parse HEAD', {encoding: 'utf8'}).trim();
  const commitHashShort = commitHash.substring(0, 8);
  const commitCount = parseInt(cp.execSync('git rev-list --count HEAD', {encoding: 'utf8'}).trim());
  const branch = cp.execSync('git rev-parse --abbrev-ref HEAD', {encoding: 'utf8'}).trim();
  
  let tag = '';
  let commitsSinceTag = 0;
  try { 
    tag = cp.execSync('git describe --tags --exact-match --all', {encoding: 'utf8'}).trim();
  } catch {
    try {
      const describeOutput = cp.execSync('git describe --tags --long --all', {encoding: 'utf8'}).trim();
      const match = describeOutput.match(/^(.+)-(\\\\d+)-g[0-9a-f]+$/);
      if (match) {
        tag = match[1];
        commitsSinceTag = parseInt(match[2]);
      }
    } catch {}
  }
  
  let packageVersion = '0.0.0';
  try {
    packageVersion = JSON.parse(fs.readFileSync('package.json', 'utf8')).version;
  } catch {}
  
  // Create computation context
  const context = {
    gitInfo: {
      commitHash,
      commitHashShort,
      branch,
      tag,
      commitsSinceTag,
      commitCount,
      packageVersion
    },
    environment: process.env.STAGE || process.env.ENVIRONMENT || 'unknown',
    deployedBy: process.env.GITHUB_ACTOR || process.env.GITLAB_USER_LOGIN || process.env.USER || 'unknown',
    buildNumber: process.env.BUILD_NUMBER || process.env.GITHUB_RUN_NUMBER,
    repository: process.env.GITHUB_REPOSITORY || process.env.CI_PROJECT_PATH,
    pipelineVersion: process.env.PIPELINE_VERSION
  };
  
  // Create strategy from configuration
  const strategyConfig = {\\"format\\":\\"{commit-count}\\",\\"components\\":{\\"commitCount\\":{\\"countFrom\\":\\"all\\"}}};
  const strategy = new VersioningStrategy(strategyConfig.format, strategyConfig.components);
  
  // Compute version
  const computer = new VersionComputer(strategy);
  computer.computeVersionInfo(context).then(versionInfo => {
    fs.writeFileSync('~version.json', versionInfo.toJson());
    console.log('Version computed:', versionInfo.version, '(commit:', versionInfo.commitHashShort + ')');
  }).catch(error => {
    console.error('Error computing version:', error.message);
    const fallback = {
      version: '0.0.0',
      commitHash: 'unknown',
      commitHashShort: 'unknown',
      branch: 'unknown',
      commitCount: 0,
      packageVersion: '0.0.0',
      deployedAt: new Date().toISOString(),
      deployedBy: 'unknown',
      environment: 'unknown'
    };
    fs.writeFileSync('~version.json', JSON.stringify(fallback, null, 2));
  });
} catch (e) {
  console.error('Error in version computation:', e.message);
  const fallback = {
    version: '0.0.0',
    commitHash: 'unknown',
    commitHashShort: 'unknown',
    branch: 'unknown',
    commitCount: 0,
    packageVersion: '0.0.0',
    deployedAt: new Date().toISOString(),
    deployedBy: 'unknown',
    environment: 'unknown'
  };
  fs.writeFileSync('~version.json', JSON.stringify(fallback, null, 2));
}"",
        },
      ],
    },
    "version:fetch:dev": {
      "description": "Fetch version data from deployed dev stack",
      "name": "version:fetch:dev",
      "steps": [
        {
          "exec": "echo "Fetching version data from CloudFormation outputs for dev..." && aws cloudformation describe-stacks --stack-name testapp-dev --region eu-central-1 --query "Stacks[0].Outputs[?starts_with(OutputKey, 'AppVersion')].{Key:OutputKey,Value:OutputValue}" --output table && echo "Fetching version data from SSM Parameter Store for dev..." && aws ssm get-parameter --name "/testapp-dev/version" --region eu-central-1 --query "Parameter.{Name:Name,Value:Value}" --output table",
        },
      ],
    },
    "version:fetch:prod": {
      "description": "Fetch version data from deployed prod stack",
      "name": "version:fetch:prod",
      "steps": [
        {
          "exec": "echo "Fetching version data from CloudFormation outputs for prod..." && aws cloudformation describe-stacks --stack-name testapp-prod --region eu-central-1 --query "Stacks[0].Outputs[?starts_with(OutputKey, 'AppVersion')].{Key:OutputKey,Value:OutputValue}" --output table && echo "Fetching version data from SSM Parameter Store for prod..." && aws ssm get-parameter --name "/testapp-prod/version" --region eu-central-1 --query "Parameter.{Name:Name,Value:Value}" --output table",
        },
      ],
    },
    "version:print": {
      "description": "Print version information",
      "name": "version:print",
      "steps": [
        {
          "exec": "cat ~version.json",
        },
      ],
    },
  },
}
`;
